# funda-search-codex

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
src/funda_search/: __init__.py  cli.py  distance.py  export.py  models.py  normalise.py  pyfunda_source.py  seen_store.py
tests/: test_normalise.py  test_seen_store.py
