[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "funda-search-codex"
version = "0.1.0"
description = "Personal Funda house search assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pyfunda>=3.1.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
funda-search = "funda_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
